# iSpeak-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ispeak-backend.service  nginx_config_example.conf  pyproject.toml  setup_https.sh  setup_https_fixed.sh
iSpeak/: api.py  config.py  pipeline.py  utils.py
iSpeak/intelligibility/: phonemes.py
iSpeak/tests/: all_segments.json  mock_pipeline.py  pipeline.test.py  segments.json
