[tool.poetry]
name = "iSpeak"
version = "0.1.0"
description = ""
authors = [
    {name = "Pierre Vinet"}
]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "rich (>=14.0.0,<15.0.0)",
    "openai-whisper",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "praat-parselmouth (>=0.4.3,<0.5.0)",
    "pandas",
    "num2words",
    "contractions",
    "jiwer",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.0.0,<3.0.0)",
    "cmudict (>=1.0.33,<2.0.0)",
    "g2p-en (>=2.1.0,<3.0.0)",
    "phonecodes (>=1.2.0,<2.0.0)"
]


