[tool.poetry]
name = "iSpeak"
version = "0.1.0"
description = ""
authors = ["Pierre Vinet"]
readme = "README.md"
requires-python = "~=3.12.0"

[tool.poetry.dependencies]
python = "~3.12.0"
numpy = "^2.2.5"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
jupyter = "^1.1.1"
pytest = "^8.3.5"
soundfile = "^0.13.1"
rich = "^14.0.0"
openai-whisper = "*"
ffmpeg-python = "^0.2.0"
praat-parselmouth = "^0.4.3"
pandas = "*"
num2words = "*"
contractions = "*"
jiwer = "*"
python-levenshtein = "^0.27.1"
seaborn = "^0.13.2"
librosa = "^0.11.0"
moviepy = "^2.1.2"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
python-multipart = "^0.0.20"
pydantic = "^2.0.0"
cmudict = "^1.0.33"
g2p-en = "^2.1.0"
phonecodes = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

